manifest/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: yellowfin-multi-instance-dev
  name: yellowfin-multi-instance-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yellowfin-multi-instance-dev
  template:
    metadata:
      labels:
        app: yellowfin-multi-instance-dev
    spec:
      containers:
        - env:
          - name: APP_MEMORY
            value: "4096"
          - name: JDBC_CLASS_NAME
            value: "org.postgresql.Driver"
          - name: JDBC_CONN_PASS
            value: "@dmin12345678"
          - name: JDBC_CONN_ENCRYPTED
            value: "false"
          - name: JDBC_CONN_URL
            value: "jdbc:postgresql://yellowfinpgakubicharm.postgres.database.azure.com:5432/yellowfin?sslmode=require"
          - name: JDBC_CONN_USER
            value: "myadmin"
          name: yellowfin-multi-instance-prod
          image: yellowfinbi/yellowfin-app-only:latest
          ports:
            - name: web
              containerPort: 8080
