manifest/deployment_fluentbit.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: yellowfin-multi-instance-dev
  name: yellowfin-multi-instance-dev
   
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yellowfin-multi-instance-dev
  template:
    metadata:
      labels:
        app: yellowfin-multi-instance-dev
    spec:
      containers:
        - name: yellowfin-multi-instance-prod
          image: yellowfinbi/yellowfin-app-only:latest
          ports:
            - name: web
              containerPort: 8080
          volumeMounts:
            - name: yellowfinlog
              mountPath: /opt/yellowfin/appserver/logs
        - name: fluentbit
          image: fluent/fluent-bit:latest
          command: []
          args: ["/fluent-bit/bin/fluent-bit", "-c", "/fluent-bit/etc/conf/fluent-bit.conf"]
          volumeMounts:
            - name: yellowfinlog
              mountPath: /opt/yellowfin/appserver/logs
            - name: config-volume
              mountPath: /fluent-bit/etc/conf
      volumes:
        - name: yellowfinlog
          emptyDir: {}
        - name: config-volume
          configMap:
            name: fluentbit-config
