manifest/deployment_keyvault.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: yellowfin-multi-instance-dev
  name: yellowfin-multi-instance-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yellowfin-multi-instance-dev
  template:
    metadata:
      labels:
        app: yellowfin-multi-instance-dev
    spec:
      containers:
      - name: yellowfin-multi-instance-prod
        image: yellowfinbi/yellowfin-app-only:latest
        ports:
        - name: web
          containerPort: 8080          
        volumeMounts:
        - name: secrets-store
          mountPath: "/secrets"
          readOnly: true
      volumes:
      - name: secrets-store
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: keyvault-jdbc
