manifest/deployment_secret.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: yellowfin-multi-instance-dev
  name: yellowfin-multi-instance-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yellowfin-multi-instance-dev
  template:
    metadata:
      labels:
        app: yellowfin-multi-instance-dev
    spec:
      containers:
        - env:
          - name: APP_MEMORY
            value: "4096"
          - name: JDBC_CLASS_NAME
            value: "org.postgresql.Driver"            
          name: yellowfin-multi-instance-prod
          image: yellowfinbi/yellowfin-app-only:latest
          ports:
            - name: web
              containerPort: 8080
