manifest/serviceLB.yaml
---
### Yellowfin Development Instance - Service ###
apiVersion: v1
kind: Service
metadata:
  name: yellowfin-multi-instance-dev
spec:
  ports:
  - name: "web"
    port: 80
    targetPort: 8080
  selector:
    app: yellowfin-multi-instance-dev
  type: LoadBalancer
