manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yellowfin-ingress
  namespace: yellowfin-prod
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /yellowfin(.*)
        pathType: Prefix
        backend:
          service:
            name: yellowfin-multi-instance-dev-clusterip
            port:
              number: 8080
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: yellowfin-multi-instance-dev-clusterip
            port:
              number: 8080
